project(phonon-qt7)

cmake_minimum_required(VERSION 2.6.2 FATAL_ERROR)

find_package(Phonon REQUIRED)
find_package(OpenGL REQUIRED)

set(PHONON_QUICKTIME_LIB_MAJOR_VERSION "4")
set(PHONON_QUICKTIME_LIB_MINOR_VERSION "4")
set(PHONON_QUICKTIME_LIB_PATCH_VERSION "3")
set(PHONON_QUICKTIME_LIB_VERSION "${PHONON_QUICKTIME_LIB_MAJOR_VERSION}.${PHONON_QUICKTIME_LIB_MINOR_VERSION}.${PHONON_QUICKTIME_LIB_PATCH_VERSION}")

add_definitions(${QT_DEFINITIONS})
include_directories(${OPENGL_INCLUDE_DIR} ${PHONON_INCLUDES} ${QT_INCLUDES})

if (Q_WS_MAC)
  add_subdirectory(qt7)
endif (Q_WS_MAC)

macro_display_feature_log()
